overlapping fix

--- a/theme/formal_white/fw_layout.css
+++ b/theme/formal_white/fw_layout.css
@@ -218,4 +218,6 @@ table.calendarmonth tr td  {
   border-style: dashed;
 }
 
-
+#content {
+  clear: both;
+}
